--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -43,11 +43,11 @@
                     <View
                         android:layout_width="0dp"
                         android:layout_height="0dp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
+                        android:background="@drawable/back_gradient"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        android:background="@drawable/back_gradient"/>
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/imgBack"
@@ -77,34 +77,34 @@
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical"
                             android:layout_marginStart="@dimen/_10sdp"
-                            >
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:id="@+id/tvEventManagerName"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:includeFontPadding="false"
-                            tools:text="User Name"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/_14ssp"
-                            app:fontFamily="@font/poppins_bold"
-                            tools:ignore="RtlCompat" />
+                            android:orientation="vertical">
+
+                            <androidx.appcompat.widget.AppCompatTextView
+                                android:id="@+id/tvEventManagerName"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:includeFontPadding="false"
+                                android:textColor="@color/white"
+                                android:textSize="@dimen/_14ssp"
+                                app:fontFamily="@font/poppins_bold"
+                                tools:ignore="RtlCompat"
+                                tools:text="User Name" />
 
                             <androidx.appcompat.widget.AppCompatTextView
                                 android:id="@+id/tvFollow"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/_5sdp"
                                 android:background="@drawable/back_follow"
-                                android:text="@string/follow"
-                                android:paddingStart="@dimen/_8sdp"
-                                android:paddingEnd="@dimen/_8sdp"
-                                android:paddingTop="@dimen/_2sdp"
-                                android:paddingBottom="@dimen/_2sdp"
-                                app:fontFamily="@font/poppins_medium"
-                                android:textColor="@color/white"
                                 android:includeFontPadding="false"
-                                android:layout_marginTop="@dimen/_5sdp"/>
+                                android:paddingStart="@dimen/_8sdp"
+                                android:paddingTop="@dimen/_2sdp"
+                                android:paddingEnd="@dimen/_8sdp"
+                                android:paddingBottom="@dimen/_2sdp"
+                                android:text="@string/follow"
+                                android:textColor="@color/white"
+                                app:fontFamily="@font/poppins_medium" />
                         </LinearLayout>
                     </LinearLayout>
 
@@ -123,7 +123,7 @@
                             android:drawableLeft="@drawable/heart"
                             android:drawablePadding="@dimen/_5sdp"
                             android:includeFontPadding="false"
-                            tools:text="1122"
+                            android:text="0"
                             android:textColor="@color/white"
                             android:textSize="@dimen/_13ssp"
                             app:fontFamily="@font/poppins_light" />
@@ -136,7 +136,7 @@
                             android:drawableLeft="@drawable/comment"
                             android:drawablePadding="@dimen/_5sdp"
                             android:includeFontPadding="false"
-                            tools:text="348"
+                            android:text="0"
                             android:textColor="@color/white"
                             android:textSize="@dimen/_13ssp"
                             app:fontFamily="@font/poppins_light"
@@ -155,10 +155,14 @@
                         android:id="@+id/tvEventDateName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:drawableStart="@drawable/ic_date"
+                        android:drawablePadding="@dimen/_3sdp"
                         android:includeFontPadding="false"
-                        tools:text="31st December DJ Party"
                         android:textColor="@color/white"
-                        app:fontFamily="@font/poppins_light" />
+                        android:textSize="@dimen/_13ssp"
+                        app:fontFamily="@font/poppins_medium"
+                        tools:text="31st December DJ Party"
+                        android:layout_marginEnd="@dimen/_10sdp"/>
 
                     <View
                         android:layout_width="0dp"
@@ -195,11 +199,10 @@
                     android:includeFontPadding="false"
                     android:paddingStart="@dimen/_12sdp"
                     android:paddingEnd="@dimen/_12sdp"
-                    tools:text="@string/dummy_event_description"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_13ssp"
-                    app:fontFamily="@font/poppins_light" />
-
+                    app:fontFamily="@font/poppins_light"
+                    tools:text="@string/dummy_event_description" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvEventTime"
@@ -209,10 +212,12 @@
                     android:includeFontPadding="false"
                     android:paddingStart="@dimen/_12sdp"
                     android:paddingEnd="@dimen/_12sdp"
-                    tools:text="@string/dummy_event_time"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_13ssp"
-                    app:fontFamily="@font/poppins_light" />
+                    app:fontFamily="@font/poppins_light"
+                    tools:text="@string/dummy_event_time"
+                    android:drawableStart="@drawable/ic_time"
+                    android:drawablePadding="@dimen/_5sdp"/>
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvEventLocation"
@@ -221,10 +226,13 @@
                     android:includeFontPadding="false"
                     android:paddingStart="@dimen/_12sdp"
                     android:paddingEnd="@dimen/_12sdp"
-                    tools:text="@string/dummy_event_location"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_13ssp"
-                    app:fontFamily="@font/poppins_light" />
+                    app:fontFamily="@font/poppins_light"
+                    tools:text="@string/dummy_event_location"
+                    android:drawableStart="@drawable/ic_location"
+                    android:drawablePadding="@dimen/_5sdp"
+                    android:layout_marginTop="@dimen/_5sdp" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerEventComment"
@@ -236,7 +244,7 @@
                     android:overScrollMode="never"
                     android:padding="@dimen/_12sdp"
                     tools:itemCount="5"
-                    tools:listitem="@layout/item_event_comment"/>
+                    tools:listitem="@layout/item_event_comment" />
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
 
@@ -244,36 +252,37 @@
             android:id="@+id/linearEventComment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_margin="@dimen/_12sdp"
             android:background="@drawable/back_write_comment"
-            android:orientation="horizontal"
             android:gravity="center_vertical"
+            android:orientation="horizontal"
             android:padding="@dimen/_1sdp"
-            android:layout_margin="@dimen/_12sdp">
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/editEventComment"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_5sdp"
+                android:layout_weight="1"
                 android:background="@color/transparent"
                 android:fontFamily="@font/poppins_medium"
-                android:includeFontPadding="false"
-                android:textSize="@dimen/_12ssp"
-                android:lines="1"
-                android:imeOptions="actionSend"
-                android:layout_weight="1"
                 android:hint="@string/write_comment"
-                android:layout_margin="@dimen/_5sdp"
-                android:textColorHint="@color/white"
+                android:imeOptions="actionSend"
+                android:includeFontPadding="false"
+                android:lines="1"
                 android:maxLines="1"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
+                android:textSize="@dimen/_12ssp" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/imgEventCommentSend"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/comment_send"/>
+                android:src="@drawable/comment_send" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
