--- a/app/src/main/res/layout/item_event_comment.xml
+++ b/app/src/main/res/layout/item_event_comment.xml
@@ -40,6 +40,7 @@
                 android:orientation="vertical">
 
                 <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvCommentUserName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="User Name"
@@ -49,6 +50,7 @@
                     android:textColor="@color/white" />
 
                 <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvCommentTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="2 Hours Ago"
@@ -70,6 +72,7 @@
 
 
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvComment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
