--- a/app/src/main/res/layout/activity_manager_details.xml
+++ b/app/src/main/res/layout/activity_manager_details.xml
@@ -116,6 +116,7 @@
                         android:layout_margin="@dimen/_12sdp">
 
                         <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/tvManagerFollowCount"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:includeFontPadding="false"
